kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/typechecher_tests/invalid/SimpleOperationCall.kmt
/* $Id: SimpleOperationCall.kmt,v 1.3 2008-04-28 11:51:16 ftanguy Exp $ */

// Simple operation Call

package tctest;

require kermeta

class A {

	operation opa(a : A) : A is do end

}

class B inherits A {

	operation opb(b : B) : B is do end
 
}

class C{}

class Test {

	operation test1() : Void is do
		A.new.opb(void)
	end
	
	operation test2() : Void is do
		B.new.opb(A.new)
	end
	
	operation test3() : Void is do
		A.new.opa(C.new)
	end
	
	operation test4() : Void is do
		var b:B
		b:= A.new.opa(void)
	end
	
	operation test5() : Void is do
		A.new.opa(void, void)
	end
	
	operation test6() : Void is do
		A.new.opa
	end

}

/* END OF FILE */
